# vit-from-scratch

./: .gitignore  README.md  app.py  pyproject.toml
.claude/: settings.json
.claude/agents/: codex-debugger.md  gemini-explore.md  general-purpose.md
.claude/docs/: CODEX_HANDOFF_PLAYBOOK.md  DESIGN.md
.claude/docs/research/: hisaichi-analysis.md
.claude/hooks/: agent-router.py  error-to-codex.py  lint-on-save.py  log-cli-tools.py  post-test-analysis.py  suggest-gemini-research.py
.claude/rules/: codex-delegation.md  dev-environment.md  gemini-delegation.md  language.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/checkpointing/: SKILL.md  checkpoint.py
.claude/skills/codex-system/: SKILL.md
.claude/skills/codex-system/references/: agent-prompts.md  code-review-task.md  delegation-patterns.md  refactoring-task.md  troubleshooting.md
.claude/skills/design-tracker/: SKILL.md
.claude/skills/gemini-system/: SKILL.md
.claude/skills/gemini-system/references/: lib-research-task.md  use-cases.md
.claude/skills/research-lib/: SKILL.md
.claude/skills/spike/: SKILL.md
.claude/skills/startproject/: SKILL.md
.claude/skills/team-implement/: SKILL.md
.claude/skills/team-review/: SKILL.md
.claude/skills/troubleshoot/: SKILL.md
.claude/skills/troubleshoot/references/: debug-patterns.md
.codex/: AGENTS.md  config.toml
.gemini/: GEMINI.md
.gemini/skills/context-loader/: SKILL.md
scripts/: update.sh
src/: model.py  predictor.py  train.py
