[project]
name = "vit-from-scratch"
version = "0.1.0"
requires-python = ">=3.11, <3.12"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "gradio>=4.0.0",
    "wandb>=0.16.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
